minor element search bar css fixes - close icon no longer overflows - input no longer overflows for large screens

--- a/src/styles/common/app-bar.css
+++ b/src/styles/common/app-bar.css
@@ -50,9 +50,13 @@
 
   /* & .element-search {
     flex-grow: 1;
+  } */
+
+  & .element-search {
+    white-space: nowrap;
   }
 
   & .element-search-input {
     width: 100%;
-  } */
+  }
 }
